--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@types/three": "^0.150.2",
     "axios": "^1.3.5",
     "core-js": "^3.30.0",
+    "file-loader": "^6.2.0",
+    "three": "^0.151.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vue3-carousel": "^0.2.16",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.57.1",
